moved SMTP client .env settings to backend package

--- a/src/packages/backend/.env
+++ b/src/packages/backend/.env
@@ -7,3 +7,6 @@ ACSYS_VIEWER_USER_PASSWORD=7x~2eEtd!@
 #DATABASE_URL="mysql://golobe:vj94pofjAE3d@localhost:3306/golobe"
 APP_ADMIN_PWD=t^pPFqa5
 APP_SECONDARYUSER_PWD=o6_Ty$Nq
+# SMTP client credentials (not configured by default for quick start build)
+SMTP_USERNAME=project.1
+SMTP_PASSWORD=secret.1
