fixed startup - restored dependency package versions as it were before refactoring

--- a/src/package.json
+++ b/src/package.json
@@ -65,8 +65,8 @@
     "env-cmd": "^10.1.0",
     "happy-dom": "^13.2.1",
     "jsonwebtoken": "^9.0.2",
-    "nuxt": "^3.13.2",
-    "nuxt-og-image": "^3.0.2",
+    "nuxt": "~3.12.4",
+    "nuxt-og-image": "~3.0.0-rc.64",
     "nuxt-tiptap-editor": "^1.1.2",
     "playwright-core": "^1.45.3",
     "sass": "^1.77.8",
