--- a/src/packages/backend/package.json
+++ b/src/packages/backend/package.json
@@ -24,45 +24,45 @@
   },
   "devDependencies": {
     "prisma": "~5.14.0",
-    "@types/jsonwebtoken": ">=9",
-    "@types/lodash": ">=4",
-    "@types/lodash-es": ">=4",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/lodash": "^4.14.199",
+    "@types/lodash-es": "^4.17.12",
     "@types/pdfkit": "^0.13.4",
-    "@types/traverse": ">=0.1",
-    "@types/nodemailer": ">=6",
+    "@types/traverse": "^0.6.33",
+    "@types/nodemailer": "^6.4.14",
     "@types/minipass": "^3.3.5",
     "@types/sanitize-html": "^2.11.0",
     "@eslint/js": "^9.11.0",
     "eslint": "^9.11.0",
     "globals": "^14.0.0",
     "typescript-eslint": "^8.6.0",
-    "c12": ">=1",
+    "c12": "^1.11.1",
     "jiti": ">=1.20",
-    "cross-env": ">=7"
+    "cross-env": "^7.0.3"
   },
   "dependencies": {
     "@golobe-demo/shared": ">=0.1",
-    "nitropack": ">=2.9",
-    "vite": ">=4",
-    "vitest": ">=1",
+    "nitropack": "2.9.7",
+    "vite": "5.3.4",
+    "vitest": "^1.2.1",    
     "@prisma/client": "~5.14.0",
     "typed-inject": "^4.0.0",
-    "lodash-es": ">=4.17",
-    "jsonwebtoken": ">=9",
+    "lodash-es": "^4.17.21",
+    "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.7",
     "sanitize-html": "^2.13.0",
     "minipass": "^7.1.2",
-    "ufo": ">=1",
-    "dayjs": ">=1.10",
-    "destr": ">=2",
-    "yup": ">=1.4",
-    "decimal.js": ">=10",
+    "ufo": "^1.5.4",
+    "dayjs": "^1.11.13",
+    "destr": "^2.0.3",
+    "yup": "^1.4.0",
+    "decimal.js": "^10.4.3",
     "pdfkit": "^0.15.0",
-    "sharp": ">=0.1",
-    "pathe": ">=1",
+    "sharp": "^0.32.6",
+    "pathe": "^1.1.2",
     "winston": "^3.13.0",
     "winston-daily-rotate-file": "^5.0.0",
-    "traverse": ">=0.6",
-    "juice": ">=10"
+    "traverse": "^0.6.9",
+    "juice": "^10.0.0"
   }
 }
