--- a/src/packages/shared/package.json
+++ b/src/packages/shared/package.json
@@ -17,22 +17,22 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.11.0",
-    "@types/lodash": ">=4",
-    "@types/lodash-es": ">=4",
+    "@types/lodash": "^4.14.199",
+    "@types/lodash-es": "^4.17.12",
     "eslint": "^9.11.0",
     "globals": "^14.0.0",
     "typescript-eslint": "^8.6.0"
   },
   "dependencies": {
-    "consola": ">=3",
-    "dayjs": ">=1.10",
-    "decimal.js": ">=10",
-    "destr": ">=2",
-    "lodash-es": ">=4.17",
-    "pathe": ">=1",
-    "slugify": ">=1.6",
-    "ufo": ">=1",
-    "yup": ">=1.4",
-    "mime": ">=4"
+    "consola": "^3.2.3",
+    "dayjs": "^1.11.13",
+    "decimal.js": "^10.4.3",
+    "destr": "^2.0.3",
+    "lodash-es": "^4.17.21",
+    "pathe": "^1.1.2",
+    "slugify": "^1.6.6",
+    "ufo": "^1.5.4",
+    "yup": "^1.4.0",
+    "mime": "^4.0.4"
   }
 }
