--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -1,4 +1,10 @@
 {
   "typescript.tsserver.experimental.enableProjectDiagnostics": true,
-  "eslint.useFlatConfig": true
+  "eslint.useFlatConfig": true,
+  "files.associations": {
+      "*.css": "tailwindcss"
+  },
+  "editor.quickSuggestions": {
+      "strings": true
+  }
 }
