--- a/src/package.json
+++ b/src/package.json
@@ -41,9 +41,18 @@
   },
   "devDependencies": {
     "@css-inline/css-inline": "^0.14.1",
+    "@iconify-json/cil": "^1.2.0",
+    "@iconify-json/gridicons": "^1.2.1",
+    "@iconify-json/grommet-icons": "^1.2.0",
+    "@iconify-json/logos": "^1.2.3",
+    "@iconify-json/material-symbols": "^1.2.2",
+    "@iconify-json/material-symbols-light": "^1.2.3",
+    "@iconify-json/mdi": "^1.2.0",
+    "@iconify-json/ph": "^1.2.0",
     "@nuxt/devtools": "latest",
     "@nuxt/eslint": "^0.3.13",
     "@nuxt/test-utils": "^3.10.0",
+    "@nuxt/ui": "^2.18.6",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/i18n": "^8.3.1",
     "@nuxtjs/seo": "^2.0.0-rc.11",
@@ -67,6 +76,7 @@
     "jsonwebtoken": "^9.0.2",
     "nuxt": "~3.12.4",
     "nuxt-og-image": "~3.0.0-rc.64",
+    "nuxt-svgo": "^4.0.6",
     "nuxt-tiptap-editor": "^1.1.2",
     "playwright-core": "^1.45.3",
     "sass": "^1.77.8",
@@ -83,8 +93,6 @@
     "@pinia/nuxt": "^0.5.1",
     "@vue-final-modal/nuxt": "^1.0.3",
     "@vueform/slider": "^2.1.10",
-    "@vuelidate/core": "^2.0.3",
-    "@vuelidate/validators": "^2.0.4",
     "axios": "^1.7.2",
     "c12": "^1.11.1",
     "cropperjs": "^1.6.2",
@@ -100,7 +108,6 @@
     "pinia": "^2.1.7",
     "scss-reset": "^1.4.2",
     "vue-final-modal": "^4.5.4",
-    "vue-toastification": "^2.0.0-rc.5",
     "vue-yandex-maps": "^2.1.4",
     "vue3-perfect-scrollbar": "^2.0.0",
     "vue3-recaptcha2": "^1.8.0",
