changes for nuxt-ui branch

--- a/src/package.json
+++ b/src/package.json
@@ -14,7 +14,7 @@
     "url": "https://github.com/i7en0v91/travel-agency-website/issues"
   },
   "scripts": {
-    "prebuild": "npm run prisma:generate-migration-scripts --workspace=@golobe-demo/backend && npm run cms-startup --workspace=@golobe-demo/backend && npx uglifyjs public/js/page-load.js  --compress --mangle -o public/js/page-load.min.js",
+    "prebuild": "npm run prisma:generate-migration-scripts --workspace=@golobe-demo/backend && npm run cms-startup --workspace=@golobe-demo/backend && npx uglifyjs public/js/page-load.js  --compress --mangle -o public/js/page-load.min.js && npx copyfiles -E -f ./packages/shared/locales/* assets/locales",
     "build": "npm run build:checks && cross-env NODE_OPTIONS='--max-old-space-size=4096' nuxt build && npx copyfiles -E -f ./packages/shared/locales/* .output/locales",
     "build:checks": "npx jiti ./scripts/build-checks.ts",
     "dev": "npm run prebuild && npx copyfiles -E -f ./packages/shared/locales/* .nuxt/locales && cross-env NEXTAUTH_URL=http://127.0.0.1:3000/api/auth nuxt dev",
