--- a/src/packages/backend/tsconfig.json
+++ b/src/packages/backend/tsconfig.json
@@ -8,6 +8,12 @@
     "moduleResolution": "Bundler",
     "lib": [
       "ESNext"
-    ]
-  }
+    ],
+    "composite": true,
+    "declaration": true
+  },
+  
+  "references": [
+    { "path": "../shared" }
+  ]
 }
