--- a/src/packages/shared/tsconfig.json
+++ b/src/packages/shared/tsconfig.json
@@ -8,6 +8,8 @@
     "moduleResolution": "Bundler",
     "lib": [
       "ESNext"
-    ]
+    ],
+    "composite": true,
+    "declaration": true
   }
 }
