--- a/src/.env
+++ b/src/.env
@@ -9,3 +9,4 @@ OAUTH_GOOGLE_CLIENT_SECRET=GoogleClientSecret
 # GOOGLE_RECAPTCHA_SECRETKEY=GoogleReCaptchaSecretKey
 # VITE_GOOGLE_RECAPTCHA_PUBLICKEY=GoogleReCaptchaPublicKey
 # VITE_YANDEX_MAPS_API_KEY=ApiKeyForYandexMapsProvider
+#VITE_ELECTRON_BUILD=1
